Add typed graph generation